Mejorar estructura y emepezar ejer1

--- a/set1/exercise1/CMakeLists.txt
+++ b/set1/exercise1/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 project(Set1_Exercise1 C)  # Especifica C
 
-set(CMAKE_C_STANDARD 99)
+set(CMAKE_C_STANDARD 11)
 
 # Solo el ejecutable principal
-add_executable(main main.c)
-
+add_executable(exercise1 main.c)
+target_link_libraries(exercise1 PUBLIC common)
