Añadir uso C++ y mejorar tools.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
 project(PruebIkerlan C)
+set(CMAKE_CXX_COMPILER gcc)
 
 add_library(common INTERFACE)
 target_include_directories(common INTERFACE common)
@@ -8,3 +9,4 @@ target_include_directories(common INTERFACE common)
 add_subdirectory(set1/exercise1)
 add_subdirectory(set1/exercise2)
 add_subdirectory(set1/exercise3)
+add_subdirectory(set1/exercise4)
