--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(set1/exercise1)
 add_subdirectory(set1/exercise2)
 add_subdirectory(set1/exercise3)
 add_subdirectory(set1/exercise4)
+add_subdirectory(set1/exercise5)
