--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ add_subdirectory(set1/exercise8)
 
 add_subdirectory(set2/exercise9)
 add_subdirectory(set2/exercise10)
-
+add_subdirectory(set2/exercise11)
 
 
 
