--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,8 @@ add_subdirectory(set1/exercise8)
 add_subdirectory(set2/exercise9)
 add_subdirectory(set2/exercise10)
 add_subdirectory(set2/exercise11)
+add_subdirectory(set2/exercise12)
+
 
 
 
