--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ add_subdirectory(set2/exercise10)
 add_subdirectory(set2/exercise11)
 add_subdirectory(set2/exercise12)
 add_subdirectory(set2/exercise13)
+add_subdirectory(set2/exercise14)
+add_subdirectory(set2/exercise15)
 
 
 
