--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,6 @@ add_subdirectory(set1/exercise6)
 add_subdirectory(set1/exercise7)
 add_subdirectory(set1/exercise8)
 
-
 add_subdirectory(set2/exercise9)
 add_subdirectory(set2/exercise10)
 add_subdirectory(set2/exercise11)
@@ -24,7 +23,7 @@ add_subdirectory(set2/exercise14)
 add_subdirectory(set2/exercise15)
 add_subdirectory(set2/exercise16)
 
-
+add_subdirectory(set3/exercise18)
 
 
 
