--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,8 @@ add_subdirectory(set2/exercise16)
 
 add_subdirectory(set3/exercise18)
 add_subdirectory(set3/exercise21)
+add_subdirectory(set3/exercise22)
+
 
 
 
