--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ add_subdirectory(set2/exercise16)
 add_subdirectory(set3/exercise18)
 add_subdirectory(set3/exercise21)
 add_subdirectory(set3/exercise22)
-
+add_subdirectory(set3/exercise23)
 
 
 
